# car_fleet

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
car_fleet/: manage.py
car_fleet/brand/: admin.py  models.py  serializers.py
car_fleet/brand/migrations/: 0001_initial.py
car_fleet/car_fleet/: asgi.py  settings.py  urls.py  views.py  wsgi.py
car_fleet/driver/: admin.py  models.py  serializers.py  urls.py  views.py
car_fleet/driver/migrations/: 0001_initial.py  0002_alter_driver_enterprise.py  0002_rename_company_driver_enterprise.py  0003_remove_driver_is_active_driver_active_vehicle.py  0004_alter_driver_active_vehicle_alter_driver_enterprise.py  0005_alter_driver_vehicle.py  0006_alter_driver_vehicle.py  0007_alter_driver_enterprise_alter_driver_vehicle.py
car_fleet/enterprise/: admin.py  models.py  serializers.py  urls.py  views.py
car_fleet/enterprise/migrations/: 0001_initial.py  0002_enterprise_timezone.py
car_fleet/helpers/: helpers.py
car_fleet/manager/: admin.py  models.py  urls.py  views.py
car_fleet/manager/migrations/: 0001_initial.py  0002_remove_manager_company_manager_enterprise.py
car_fleet/point/: admin.py  models.py  serializers.py  urls.py  views.py
car_fleet/point/migrations/: 0001_initial.py  0002_point_time.py  0003_remove_point_vehicle_point_vehicle.py
car_fleet/report/: admin.py  models.py  urls.py  views.py
car_fleet/route/: admin.py  models.py  serializer.py  serializers.py  urls.py  views.py
car_fleet/vehicle/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
(+38 files in other folders)
